<resources>
    <string name="app_name">Wealth Simple - TM</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="login">Login</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="signup_now">Signup Now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="monthly_withdrawal">Monthly Withdrawal</string>
    <string name="monthly_investment">Monthly Investment</string>
    <string name="lumpsum_investment">Lumpsum Investment</string>
    <string name="lumpsum_withdraw_amount">Lumpsum Withdrawal Amount</string>
    <string name="monthly_withdraw_amount">Monthly Withdrawal Amount</string>
    <string name="all_units">All Units</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="made_with">Made with</string>
    <string name="by">by</string>
    <string name="credit1">Ankit Priyarup (Lead Developer)</string>
    <string name="credit2">Anukriti Kumar (Developer)</string>
    <string name="credit3">Gangesh Chawla (Project Manager)</string>
    <string name="credit4">Kuldeep KD Bagwari (Backend Developer)</string>
    <string name="your_estimated_wealth">Your Estimated Wealth:</string>
    <string name="_10_years">10 years</string>
    <string name="_20_years">20 years</string>
    <string name="_50_years">50 years</string>
    <string name="your_actions">Your Actions:</string>
    <string name="your_wealth_today">Your Wealth Today:</string>
    <string name="recent_transactions">Recent Transactions:</string>
    <string name="withdraw">Withdraw</string>
    <string name="empty_status">You haven\'t purchased anything yet</string>
    <string name="invested">Invested:</string>
    <string name="gain_loss">Gain/Loss:</string>
    <string name="withdrawnamount">Withdrawn:</string>
    <string name="multiple">Multiple:</string>
    <string name="net_investment">Net Investment:</string>
    <string name="market_value">Market Value:</string>
    <string name="confirm_dob">Confirm your Date Of Birth</string>
    <string name="spotlight_title1">Add and Withdraw Amounts</string>
    <string name="spotlight_description1">Easily add and withdraw transactions in one tap</string>
    <string name="spotlight_title2">Estimate earnings</string>
    <string name="spotlight_description2">Not sure how much to invest? Calculate and plan your investment first</string>
    <string name="videos">Videos</string>
    <string name="documents">Documents</string>
    <string name="monitor">Monitor</string>
    <string name="checklist">Checklist</string>
    <string name="learn">Learn</string>
    <string name="add_amount">Add Amount</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="estimate">Estimate</string>
    <string name="credits">Credits</string>
    <string name="sign_out">Sign Out</string>
    <string name="accept_all_terms">Accept All Terms</string>
    <string name="check_now">Check Now</string>
    <string name="lacs">Lacs</string>
    <string name="crores">Crores</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_failed_message">Sorry, user not found. Please recheck your mobile number. In case you are not a Bharosa member visit www.bharosaclub.com and become a member.</string>
    <string name="login_failed_credential_message">Sorry, credentials didn\'t match. Please recheck your credentials.</string>
    <string name="okay">OK</string>
    <string name="unable_to_connect">Unable to connect</string>
    <string name="unable_to_connect_message">Sorry, unable to connect to the server. Please check your internet connection.</string>
    <string name="pinlock_title">Enter Pin Code</string>
    <string name="pinlock_settitle">Set Pin Code</string>
    <string name="pinlock_wrongpin">Wrong Pin code</string>
    <string name="pinlock_secondPin">Enter Pin Code Again</string>
    <string name="pinlock_tryagain">Pin Codes Are Not The Same</string>
    <string name="pinlock_fingerprint">Use Fingerprint</string>
    <string name="select_language">Select Language</string>
    <string name="no_recent_transactions">No Recent Transactions Found :(</string>
    <string name="act">ACT</string>
    <string name="knowledge">KNOWLEDGE</string>
    <string name="confirm">Confirm</string>
    <string name="sure_add">Are you sure you want to add the specified transaction?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure_delete">Are you sure you want to delete this transaction?</string>
    <string name="allunits_delete">All your holdings will be redeemed. All monthly transactions will be canceled. The redemption transactions may involve penalties and short-term taxes. Please confirm if you want to go ahead</string>
    <string name="desc_update">Type the new amount that you want the current value to be updated to</string>
    <string name="message">Message</string>
    <string name="error_document">Error loading document!</string>
    <string name="message_amount_multiple">The amount added should be a multiple of 100</string>
    <string name="message_amount_invalid">The amount added is not valid</string>
    <string name="message_amount_more">The first amount added should be more than 500</string>
    <string name="message_accept_checklist">You need to accept all the conditions before doing any transactions</string>
    <string name="message_back">Please click BACK again to exit</string>
    <string name="checklist_accepted">All checklist accepted</string>
    <string name="withdraw_new_user">You cannot withdraw any amount until you add some to your account</string>
    <string name="forgot_pass_message">Further information have been sent to you</string>
    <string name="specific_amount">Specific Amount</string>
    <string name="update_transaction">Update Transaction</string>
    <string name="amount_updated">Your amount has been updated</string>
    <string name="update">Update</string>
    <string name="bharosa_advisor">Bharosa Advisor</string>
    <string name="bharosa_motto">Make More. Pay Less.</string>
    <string name="withdraw_update_overflow">Amount updated shouldn\'t exceed the total amount</string>
    <string name="document_instruction">Swipe left and right to flip pages</string>
    <string name="insufficient_withdraw">You don\'t have sufficient balance left</string>
    <string name="triple_your_money_in_ten_years">Triple your money in ten years</string>
    <string name="get_started">Get Started</string>
    <string name="could_not_load_learn">Could not load learn section please check your internet connection</string>

    <string name="path_ridge_1">M56.2199243,45.3815903 C56.2199243,45.3815903 65.1913567,38.8543184 80.3604294,38.8543184 C95.5295022,38.8543184 103.720044,45.2851323 103.720044,45.2851323</string>
    <string name="path_ridge_2">M45.5181172,67.9181841 C49.9761548,62.7019025 59.122049,49.7790452 80.2279027,49.7790452 C101.333756,49.7790452 110.740506,62.0384399 114.937688,67.9181841</string>
    <string name="path_ridge_3">M51.7375623,107.718438 C51.7375623,107.718438 48.7129745,99.6302234 48.7129745,91.6334356 C48.7129745,81.3266864 55.9028711,60.2476586 80.4057228,60.2478671 C100.798248,60.2480407 112.457463,79.7942647 112.457463,88.386575 C112.457462,99.2963939 105.619846,103.039218 100.781849,102.18762 C95.9438519,101.336021 90.4490979,97.2187731 91.0639139,92.3178681 C91.67873,87.4169631 85.2177374,81.3265129 80.7504553,81.3266871 C73.0900115,81.3269859 69.8146331,85.3921834 69.8146329,92.2700585 C69.8146324,107.718437 83.7557525,121.02713 91.6787289,121.027128</string>
    <string name="path_ridge_4">M70.7357889,121.024995 C70.7357889,121.024995 57.4650216,106.018711 58.8888756,91.5596242 C60.5513085,74.6777941 73.9858126,70.313752 80.3788823,70.3807995 C86.771952,70.4478469 101.550994,76.8218704 101.550997,92.2895418</string>
    <string name="path_ridge_5">M80.1599645,91.1813411 C80.1599645,91.1813411 81.1144795,102.68333 86.7971146,107.529716 C93.2390527,113.023667 105.911091,112.342743 105.911091,112.342743</string>
    <string name="path_tick">M52.2735573,79.0771904 C52.2735573,79.0771904 69.2403688,96.0440006 69.2403683,96.0440014 C69.2403679,96.0440021 109.820188,55.4641819 109.820188,55.4641819</string>
    <string name="path_cross_1">M62,62 C62,62 80.5647617,80.5647617 80.564762,80.564762 C80.5647622,80.5647622 94.2921789,94.223714 98.5644262,98.5644262</string>
    <string name="path_cross_2">M98.5644262,62 C98.5644251,62 81.1979242,79.366503 81.1979229,79.3665033 C81.1979216,79.3665035 62,98.5644262 62,98.5644262</string>

</resources>