<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:navigationIcon="@drawable/ic_estimate_dark"
        app:title="@string/estimate"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:id="@+id/estimate_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/lumpsum_investment"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/estimate_lumpsum_investment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:inputType="numberDecimal"
                android:labelFor="@id/estimate_lumpsum_investment"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="#000000"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/monthly_investment"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/estimate_monthly_investment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:inputType="numberDecimal"
                android:labelFor="@id/estimate_monthly_investment"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="#000000"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/monthly_withdrawal"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/estimate_monthly_withdrawal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:inputType="numberDecimal"
                android:labelFor="@id/estimate_monthly_withdrawal"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="#000000"
                tools:ignore="LabelFor" />

            <LinearLayout
                android:id="@+id/estimated_wealth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_wealth"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/your_estimated_wealth"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/estimate_wealth_label_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="30dp"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/estimate_wealth_info_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="30dp" />

                <TextView
                    android:id="@+id/estimate_wealth_label_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="30dp"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/estimate_wealth_info_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="30dp"/>

                <TextView
                    android:id="@+id/estimate_wealth_label_50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="30dp"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/estimate_wealth_info_50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="30dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_alignBottom="@id/estimate_sheet"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <Button
            android:id="@+id/estimate_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/cancel"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/estimate_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/estimate"
            android:textColor="@color/colorAccent" />

    </LinearLayout>
</RelativeLayout>